updated public profile

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="PackShop a simple shop for small business owners"
+      content="StoreTract a simple store for small business owners"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,7 +18,7 @@
             crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/eedc5762fd.js"></script>
-    <title>PackShop</title>
+    <title>StoreTract</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
