--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous"
     />
+    <script src="https://checkout.flutterwave.com/v3.js"></script>
     <script src="https://kit.fontawesome.com/eedc5762fd.js"></script>
     <title>StoreTract</title>
   </head>
